[package]
name = "twenty-twenty"
version = "0.1.0"
authors = ["Joel <hofgren.joel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "twentytwenty"
path = "src/main.rs"

[lib]
name = "twentytwenty"
path = "src/lib.rs"

[dependencies]
