[package]
name = "twenty-two"
version = "0.1.0"
edition = "2021"
authors = ["Joel <joel@hof4j.se>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "twentytwolib"
path = "src/lib.rs"

[dependencies]
regex = "1.7.0"
lazy_static = "1.4.0"
